# Nitin-Sonal-Silver-Jubilee

./: .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  README.md
.github/workflows/: deploy.yml
output/review/: index.html
output/website-data/: people.json
processor/: .gitignore  README.md  config.yaml  main.py  pyproject.toml
processor/src/family_photo_finder/: __init__.py  cache.py  cli.py  cluster.py  config.py  deploy.py  detect.py  drive.py  imaging.py  logging_utils.py  models.py  pipeline.py  review.py  site.py  state.py  thumbs.py
website/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
website/src/: App.tsx  main.tsx  types.ts
website/src/components/: FaceCard.tsx  PhotoTile.tsx  SearchBar.tsx  VirtualPhotoGrid.tsx
website/src/data/: loader.ts  usePeople.ts
website/src/pages/: HomePage.tsx  PersonPage.tsx
website/src/styles/: index.css
