[project]
name = "family-photo-finder"
version = "0.1.0"
description = "Process event photos into a static photo-finder website."
readme = "../README.md"
requires-python = ">=3.11"
authors = [{ name = "Family Photo Finder" }]
license = { text = "MIT" }
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.17.0",
    # onnx 1.19 references ml_dtypes.float4_e2m1fn (only in ml_dtypes>=0.5),
    # but onnxruntime pins ml_dtypes<0.5 — keep onnx on the 1.18 line.
    "onnx>=1.16,<1.19",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.4.0",
    "Pillow>=10.0.0",
    "pillow-heif>=0.16.0",
    "google-api-python-client>=2.120.0",
    "google-auth>=2.28.0",
    "google-auth-oauthlib>=1.2.0",
    "google-auth-httplib2>=0.2.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "PyYAML>=6.0.1",
    "click>=8.1.7",
    "rich>=13.7.0",
]

[project.scripts]
photo-finder = "family_photo_finder.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/family_photo_finder"]

[tool.uv]
package = true
